--- a/pom.xml
+++ b/pom.xml
@@ -20,16 +20,11 @@
             <version>1.18.30</version>
             <scope>compile</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.slf4j</groupId>-->
-<!--            <artifactId>slf4j-log4j12</artifactId>-->
-<!--            <version>1.7.25</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.logging.log4j</groupId>-->
-<!--            <artifactId>log4j-1.2-api</artifactId>-->
-<!--            <version>2.8.2</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version> <!-- 使用最新版本 -->
+        </dependency>
 
         <!-- log4j2 -->
         <dependency>
